--- a/drivers/wiab-device/pair/select_trigger_sensors.html
+++ b/drivers/wiab-device/pair/select_trigger_sensors.html
@@ -129,18 +129,6 @@
                     document.getElementById('trigger-loading').style.display = 'none';
                 });
 
-            // Listen for continue event (when user clicks Next)
-            Homey.on('continue', function() {
-                console.log('Sending selected devices:', selectedDevices);
-                Homey.emit('select_trigger_sensors', selectedDevices)
-                    .then(function(result) {
-                        console.log('Selection saved:', result);
-                    })
-                    .catch(function(error) {
-                        console.error('Error saving selection:', error);
-                        showError('Failed to save selection: ' + (error.message || error));
-                    });
-            });
         }
 
         function renderDevices(devices) {
@@ -155,14 +143,14 @@
             devices.forEach(function(device) {
                 const item = document.createElement('div');
                 item.className = 'device-item';
-                if (selectedDevices.some(function(d) { return d.id === device.id; })) {
+                if (selectedDevices.some(function(d) { return d.deviceId === device.deviceId; })) {
                     item.classList.add('selected');
                 }
 
                 const checkbox = document.createElement('input');
                 checkbox.type = 'checkbox';
                 checkbox.className = 'device-checkbox';
-                checkbox.checked = selectedDevices.some(function(d) { return d.id === device.id; });
+                checkbox.checked = selectedDevices.some(function(d) { return d.deviceId === device.deviceId; });
                 checkbox.addEventListener('change', function() {
                     toggleDevice(device);
                 });
@@ -196,13 +184,23 @@
         }
 
         function toggleDevice(device) {
-            const index = selectedDevices.findIndex(function(d) { return d.id === device.id; });
+            const index = selectedDevices.findIndex(function(d) { return d.deviceId === device.deviceId; });
             if (index > -1) {
                 selectedDevices.splice(index, 1);
             } else {
                 selectedDevices.push(device);
             }
             renderDevices(allDevices);
+
+            // Send selection immediately to driver (don't wait for continue event)
+            console.log('Sending updated selection:', selectedDevices);
+            Homey.emit('select_trigger_sensors', selectedDevices)
+                .then(function(result) {
+                    console.log('Selection saved:', result);
+                })
+                .catch(function(error) {
+                    console.error('Error saving selection:', error);
+                });
         }
 
         function showError(message) {
